# retalk-claude

./: .gitignore  README.md  README_EN.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: DEVELOPMENT_LOG.md
docs/copyright/: 源代码_前30页.txt  源代码_后30页.txt  源程序_前30页.txt  源程序_后30页.txt  软件说明书.md  软件说明书_完整版.md  软著申请信息.md
docs/superpowers/plans/: 2026-04-27-retalk-implementation.md
docs/superpowers/specs/: 2026-04-27-retalk-design.md
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  ecosystem.rs  indexer.rs  lib.rs  main.rs  models.rs  scanner.rs  searcher.rs  terminal.rs  timeline.rs  updater.rs
src-tauri/src/providers/: aider.rs  claude.rs  codex.rs  continue_dev.rs  cursor.rs  gemini.rs  kilo.rs  mod.rs  opencode.rs
