[package]
name = "retalk"
version = "0.1.0"
edition = "2021"

[lib]
name = "retalk_lib"
crate-type = ["lib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tantivy = "0.22"
jieba-rs = "0.7"
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
parking_lot = "0.12"

[build-dependencies]
tauri-build = { version = "2", features = [] }
