[package]
name = "retalk"
version = "0.1.0"
edition = "2021"
default-run = "retalk"

[lib]
name = "retalk_lib"
crate-type = ["lib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tantivy = "0.22"
jieba-rs = "0.7"
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
parking_lot = "0.12"
rusqlite = { version = "0.33", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
colored = "3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[[bin]]
name = "retalk-cli"
path = "src/bin/retalk_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
